YUK-6663 - Upgrade Tomcat to 5.5.27 (or latest) Reverted back to 27967 to re-attempt this update.