@@ -1,62 +1,24 @@
 @echo off
 if "%OS%" == "Windows_NT" setlocal
-rem ---------------------------------------------------------------------------
-rem NT Service Install/Uninstall script
-rem
-rem Options
-rem install                Install the service using Tomcat5 as service name.
-rem                        Service is installed using default settings.
-rem remove                 Remove the service from the System.
-rem
-rem name        (optional) If the second argument is present it is considered
-rem                        to be new service name                                           
-rem
-rem $Id: service.bat 414655 2006-06-15 18:56:42Z yoavs $
-rem ---------------------------------------------------------------------------
 
-rem Guess CATALINA_HOME if not defined
+set JRE_HOME=%2
+
 set CURRENT_DIR=%cd%
-if not "%CATALINA_HOME%" == "" goto gotHome
-set CATALINA_HOME=%cd%
-if exist "%CATALINA_HOME%\bin\tomcat5.exe" goto okHome
-rem CD to the upper dir
+
 cd ..
 set CATALINA_HOME=%cd%
-:gotHome
-if exist "%CATALINA_HOME%\bin\tomcat5.exe" goto okHome
-echo The tomcat.exe was not found...
-echo The CATALINA_HOME environment variable is not defined correctly.
-echo This environment variable is needed to run this program
-goto end
-rem Make sure prerequisite environment variables are set
-if not "%JRE_HOME%" == "" goto okHome
-echo The JRE_HOME environment variable is not defined
-echo This environment variable is needed to run this program
-goto end 
-:okHome
-if not "%CATALINA_BASE%" == "" goto gotBase
+
 set CATALINA_BASE=%CATALINA_HOME%
-:gotBase
  
 set EXECUTABLE=%CATALINA_HOME%\bin\tomcat5.exe
 
-rem Set default Service name
 set SERVICE_NAME=YukonWebApplicationService
+
 set PR_DISPLAYNAME=Yukon Web Application Service
 
-if "%1" == "" goto displayUsage
-if "%2" == "" goto setServiceName
-set SERVICE_NAME=%2
-set PR_DISPLAYNAME=%2
-:setServiceName
 if %1 == install goto doInstall
 if %1 == remove goto doRemove
 if %1 == uninstall goto doRemove
-echo Unknown parameter "%1"
-:displayUsage
-echo.
-echo Usage: service.bat install/remove [service_name]
-goto end
 
 :doRemove
 rem Remove the service
@@ -80,9 +42,8 @@ set PR_LOGPATH=%CATALINA_BASE%\logs
 set PR_CLASSPATH=%CATALINA_HOME%\bin\bootstrap.jar
 
 rem Set the client jvm from JRE_HOME
-set PR_JVM=%JRE_HOME%\bin\client\jvm.dll
+set PR_JVM=%JRE_HOME%\bin\server\jvm.dll
 if exist "%PR_JVM%" goto foundJvm
-set PR_JVM=auto
 
 :foundJvm
 echo Using JVM:              %PR_JVM%
@@ -108,7 +69,7 @@ rem More extra parameters
 set PR_LOGPATH=%CATALINA_BASE%\logs
 set PR_STDOUTPUT=auto
 set PR_STDERROR=auto
-"%EXECUTABLE%"//US//%SERVICE_NAME% ++JvmOptions "-Djava.io.tmpdir=%CATALINA_BASE%\temp" --JvmMs 256 --JvmMx 384
+"%EXECUTABLE%"//US//%SERVICE_NAME% ++JvmOptions "-Djava.io.tmpdir=%CATALINA_BASE%\temp;-XX:MaxPermSize=80m" --JvmMs 256 --JvmMx 384
 echo The service 'Yukon Web Application Service' has been installed.
 
 :end
